--- a/android/AudioLive/app/src/main/res/values/styles.xml
+++ b/android/AudioLive/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
         <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
 </resources>
