--- a/android/AudioLive/app/src/main/res/layout/activity_main.xml
+++ b/android/AudioLive/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.zego.audioroomdemo.MainActivity">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:context="com.zego.audioroomdemo.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
         app:navigationIcon="@mipmap/ic_setting_72"
-        app:title="" />
+        app:title=""/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,17 +22,18 @@
         android:layout_marginTop="100dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <EditText
             android:id="@+id/room_name"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:hint="@string/zg_tip_input_room_name"
+            android:maxLength="1024"
             android:maxLines="1"
             android:singleLine="true"
-            android:maxLength="1024"
-            android:hint="@string/zg_tip_input_room_name" />
+            android:text="1212"/>
 
         <Button
             android:id="@+id/btn_login_logout"
@@ -40,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:enabled="true"
             android:text="@string/zg_login_room"
-            android:enabled="false"
             tools:layout_editor_absoluteY="0dp"/>
 
     </LinearLayout>
