--- a/android/AudioLive/app/src/main/res/layout/activity_session.xml
+++ b/android/AudioLive/app/src/main/res/layout/activity_session.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zego.audioroomdemo.activities.SessionActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_communicate_action"
@@ -21,53 +23,61 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="@string/zg_start_communicate"
-                tools:layout_editor_absoluteY="0dp" />
+                tools:layout_editor_absoluteY="0dp"/>
 
             <Button
                 android:id="@+id/btn_mute"
+                style="@style/NormalButton"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                style="@style/NormalButton"
-                android:text="@string/zg_btn_text_mute"
-                android:enabled="false" />
+                android:enabled="false"
+                android:text="@string/zg_btn_text_mute"/>
 
             <Button
                 android:id="@+id/btn_microphone"
+                style="@style/NormalButton"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                style="@style/NormalButton"
+                android:enabled="false"
                 android:text="@string/zg_btn_text_mic_off"
-                android:enabled="false" />
+                android:visibility="gone"/>
+
+            <Button
+                android:id="@+id/btn_call_action"
+                style="@style/NormalButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/zg_start_call"/>
 
             <Button
                 android:id="@+id/btn_aux"
+                style="@style/NormalButton"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                style="@style/NormalButton"
-                android:text="@string/zg_btn_text_aux"
-                android:enabled="false" />
+                android:enabled="false"
+                android:text="@string/zg_btn_text_aux"/>
 
             <Button
                 android:id="@+id/btn_recorder"
+                style="@style/NormalButton"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                style="@style/NormalButton"
-                android:text="@string/zg_btn_text_record_on"
                 android:enabled="false"
+                android:text="@string/zg_btn_text_record_on"
                 android:visibility="gone"/>
-
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_event_tips"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
             android:maxLines="1"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"/>
@@ -76,11 +86,11 @@
             android:id="@+id/stream_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            tools:layout_editor_absoluteY="8dp"
-            tools:layout_editor_absoluteX="8dp">
+            android:layout_marginTop="30dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
 
         </ListView>
 
@@ -89,42 +99,45 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/zg_tip_no_stream" />
+            android:text="@string/zg_tip_no_stream"/>
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_alignParentBottom="true"
         android:background="#66e5e5e5"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <Button
             android:id="@+id/btn_send"
+            style="@style/NormalButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            style="@style/NormalButton"
+            android:layout_alignParentRight="true"
             android:text="Send"/>
+
         <EditText
             android:id="@+id/et_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="left|center_horizontal"
+            android:layout_alignBaseline="@id/btn_send"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@id/btn_send"
-            android:layout_alignBaseline="@id/btn_send"
-            android:maxLines="5"
-            android:hint="Input text message: "/>
+            android:gravity="left|center_horizontal"
+            android:hint="Input text message: "
+            android:maxLines="5"/>
+
         <ListView
             android:id="@+id/lv_messages"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_above="@id/btn_send"/>
+            android:layout_above="@id/btn_send"
+            android:layout_alignParentTop="true"/>
     </RelativeLayout>
 
 </RelativeLayout>
